--- a/index.html
+++ b/index.html
@@ -11,13 +11,47 @@
 <body>
 
     <div class="container">
+
         <div class="home">
-            <h1>Home Page</h1>
+            <div class="grid-container">
+
+                <div class="header">
+                    <p id="header">This is the Home Page</p>
+                    <p id="para">Description of the Home Page Here</p>
+                </div>
+
+                <div class="circles">
+                    <div class="circle">circle one</div>
+                    <div class="circle">circle two</div>
+                    <div class="circle">circle three</div>
+                </div>
+
+                <div class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Maxime ea obcaecati quod? Voluptatibus consectetur sequi odit. Corrupti 
+                    culpa doloribus animi voluptas 
+                    cupiditate saepe explicabo perspiciatis, 
+                    accusamus id iste quo eligendi.
+                </div>
+
+                <!-- <div class="bigcircle">Big Circle</div> -->
+            </div>
+        </div>
+
+
+        <div class="next">
+            <h1>Next Page</h1>
+
             <div class="circles">
                 <div class="circle">circle one</div>
                 <div class="circle">circle two</div>
                 <div class="circle">circle three</div>
             </div>
+
+            <div class="para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                Maxime ea obcaecati quod? Voluptatibus consectetur sequi odit. Corrupti 
+                culpa doloribus animi voluptas 
+                cupiditate saepe explicabo perspiciatis, 
+                accusamus id iste quo eligendi.</div>
         </div>
     </div>
     
