--- a/html/index.html
+++ b/html/index.html
@@ -375,6 +375,29 @@
                 </section>
             </section>
         </section>
+
+        <!-- ------------------------------------------------------------- -->
+        <!-- ------------------------------------------------------------- -->
+        <!-- ------------------------------------------------------------- -->
+        <!-- ------------------------------------------------------------- -->
+        <!-- ------------------------------------------------------------- -->
+        <!-- ------------------------------------------------------------- -->
+        <!-- ------------------------------------------------------------- -->
+        <!-- ------------------------------------------------------------- -->
+
+        <!-- PORTFOLIO SECTION -->
+        <section id="portfoliotabletcontainer">
+            <!-- MAIN MOBILE PORTFOLIO SECTION -->
+            <section id="portfoliotabletdiv">
+                <!-- TOP level of portfolio mobile -->
+                <section class="topportfoliotablet">
+                    <!-- Title Mobile -->
+                    <div class="titlemobile">
+                        <h1>Portfolio</h1>
+                    </div>
+                </section>
+            </section>
+        </section>
     </section>
     
 
