app1 slide in done need positioning

--- a/html/index.html
+++ b/html/index.html
@@ -485,6 +485,33 @@
                                 </div>    
                             </div>
                         </div>
+                        <!-- Close Button -->
+                         <div class="closeapp1">
+                            <button class="back_arrow_one"><img src="/img/arrows/backArrow.png" alt="">Back</button>
+                        </div>
+                    </div>
+                    <!-- --------------------------- -->
+                    <!-- --------------------------- -->
+                    <!-- --------------------------- -->
+                    <!-- --------------------------- -->
+                    <!-- --------------------------- -->
+                    <!-- --------------------------- -->
+                    <!-- --------------------------- -->
+                    <!-- --------------------------- -->
+                    <!-- --------------------------- -->
+                    <!-- --------------------------- -->
+                    <!-- --------------------------- -->
+                    <!-- --------------------------- -->
+                    <!-- --------------------------- -->
+                    <!-- APP #1 DESCRIPTION SLIDE IN END -->
+
+                    <!-- Portfolio Outline -->
+                    <div class="portfoliooutlinetablet">
+                        <!-- App One -->
+                        <button class="app1">
+                            <img src="/img/logo/white_logo_transparent_background.png" alt="CourDevelops">
+                            <p>Workflow App</p>
+                        </button>
                     </div>
                 </section>
             </section>
