tablet container turned to class

--- a/html/index.html
+++ b/html/index.html
@@ -16,8 +16,10 @@
     </section>
 
     <!-- TABLET CONTAINER -->
-    <section id="tabletcontainer">
-        
+    <section class="tabletcontainer">
+
+        <!-- TABLET CONTAINER DIV -->
+
         <!-- TABLET HOME -->
         <section id="tablethome">
 
