--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+<body class="body">
 
     <!-- MOBILE CONTAINER -->
     <section id="mobilecontainer">
