top Logo match menu

--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,8 @@
              <div class="tophometablet">
                 <!-- CourDevsLogo -->
                 <div class="logotablet">
-                    <img src="/img/logo/white_logo_transparent_background.png" alt="Logo">
+                    <img src="/img/logo/CourdevelopsPortfoly.png" alt="Logo">
+                    <!-- <img src="/img/logo/CourdevelopsPortfoly.png" alt="Logo"> -->
                 </div>
 
                 <!-- Hamburger -->
