first two apps done

--- a/html/index.html
+++ b/html/index.html
@@ -541,20 +541,20 @@
                     
                                 <div class="apptechnologiestwo">
                                     <h3>Technologies used:</h3>
-                                    <div class="apptechcircles">
-                                        <div class="apptechcircle">
+                                    <div class="apptechcirclestwo">
+                                        <div class="apptechcircletwo">
                                             <div id="react">
                                                 <img src="/img/petiteicons/petitereact.png" alt="react">
                                                 <p>ReactJS</p>
                                             </div>
                                         </div>
-                                        <div class="apptechcircle">
+                                        <div class="apptechcircletwo">
                                             <div id="express">
                                                 <img src="/img/petiteicons/petiteexpressjs.png" alt="express">
                                                 <p>Express</p>
                                             </div>
                                         </div>
-                                        <div class="apptechcircle">
+                                        <div class="apptechcircletwo">
                                             <div id="mongo">
                                                 <img src="/img/petiteicons/petitemongodb.png" alt="mongo">
                                                 <p>MongoDB</p>
@@ -567,7 +567,7 @@
                                         <h3>Accomplishments:</h3>
                                         <p>Authentication and multiple accounts</p>
                                         <p>Specific algorithm for job vetting</p>
-                                        <p>Makes work experience more accessible to inexperienced devs</p>
+                                        <p>Makes work experience more accessible to new devs</p>
                                         <p>Database integrations</p>
                                         <p>Web3 payments</p>
                                     </div>
@@ -591,7 +591,7 @@
                         </div>
                         <!-- Close Button -->
                         <div class="closeapp2">
-                            <button class="close_description_two"><img src="./img/arrows/backArrow.png" alt="">Back</button>
+                            <button class="back_arrow_two"><img src="/img/arrows/backArrow.png" alt="">Back</button>
                         </div>
                         </div>
 
