app 3 on front page

--- a/html/index.html
+++ b/html/index.html
@@ -619,6 +619,10 @@
                         <button class="app2">
                             <img src="/img/experience/experience/CreateCollabLogoGreen.png" alt="CreateColab">
                         </button>
+                        <!-- App Three -->
+                        <button class="app3">
+                            <img src="/img/experience/experience/MSYLogo.png" alt="MSYLogo">
+                        </button>
                     </div>
                 </section>
             </section>
