--- a/html/index.html
+++ b/html/index.html
@@ -627,6 +627,45 @@
                 </section>
             </section>
         </section>
+
+        <!-- EXPERIENCE SECTION -->
+        <section id="experiencetabletcontainer">
+            <!-- MAIN EXPERIENCE MOBILE SECTION -->
+            <section id="experiencetablet">
+                <!-- TOP Level of about experience page -->
+                <section class="topexperiencetablet">
+                    <!-- Title Mobile -->
+                    <div class="titletablet">
+                        <h1>Experience</h1>
+                    </div>
+                </section>
+
+                <!-- BOTTOM of experience tablet page -->
+                <section class="botexperiencetablet">
+                    <!-- Places -->
+                    <div class="places">
+                        <div class="courdevs">
+                            <img src="/img/logo/white_logo_transparent_background.png" alt="Courdevelops">
+                            <div class="jobdeets">
+                                <h4>CourDevelops</h4>
+                                <p>Frontend Developer</p>
+                                <p>Mar 2020 - Present</p>
+                            </div>
+                        </div>
+    
+                        <div class="slea">
+                            <img src="/img/experience/past jobs/SLEA.png" alt="SLEA">
+                            <div class="jobdeets">
+                                <h4>Service Lane eAdvisor</h4>
+                                <p>Tech team Supervisor</p>
+                                <p>Jan 2012 - Mar 2020</p>
+                            </div>
+                        </div>
+                    </div>
+
+               </section>
+            </section>
+        </section>
     </section>
     
 
