--- a/html/index.html
+++ b/html/index.html
@@ -675,6 +675,62 @@
                </section>
             </section>
         </section>
+
+        <!-- ---------------------------------------------------- -->
+        <!-- ---------------------------------------------------- -->
+        <!-- ---------------------------------------------------- -->
+        <!-- ---------------------------------------------------- -->
+        <!-- ---------------------------------------------------- -->
+        <!-- ---------------------------------------------------- -->
+
+        <!-- BLOG SECTION -->
+        <section id="blogtabletcontainer">
+            <!-- BLOG EXPERIENCE MOBILE SECTION -->
+            <section id="blogtablet">
+                <!-- TOP Level of blog tablet page -->
+                <div class="topblogtablet">
+                    <!-- Title Mobile -->
+                    <div class="titlemobile">
+                        <h1>Blog</h1>
+                    </div>
+                </div>
+
+                <!-- BOTTOM of the blog section -->
+            <section id="botblogtablet">
+                <!-- BLOGS container -->
+                <div class="botblogoutline">
+                        
+                    <!-- The actual Circles -->
+                    <div class="blogcircles">
+                        <button class="blogcontent">
+                            <div class="blogcircle">
+                                <h2>My Developer Journey</h2>
+                                <p>/// May 1, 2023</p>
+                            </div>
+                        </button>
+                    </div>
+
+                    <div class="blogcircles">
+                        <button class="blogcontent">
+                            <div class="blogcircle">
+                                <h2>Find your own way</h2>
+                                <p>/// May 19, 2023</p>
+                            </div>
+                        </button>
+                    </div>
+
+                    <div class="blogcircles">
+                        <div class="blogcontent">
+                            <a href="blogthree.html" class="blogcircle">
+                                <h2>Map your dev career</h2>
+                                <p>/// May 26, 2023</p>
+                            </a>
+                        </div>
+                    </div>
+            </div>
+            </section>
+            </section>
+        </section>
     </section>
     
 
