blog layout done

--- a/html/index.html
+++ b/html/index.html
@@ -720,12 +720,12 @@
                     </div>
 
                     <div class="blogcircles">
-                        <div class="blogcontent">
+                        <button class="blogcontent">
                             <a href="blogthree.html" class="blogcircle">
                                 <h2>Map your dev career</h2>
                                 <p>/// May 26, 2023</p>
                             </a>
-                        </div>
+                        </button>
                     </div>
             </div>
             </section>
