blog layout done

--- a/html/index.html
+++ b/html/index.html
@@ -722,7 +722,7 @@
                     <div class="blogcircles">
                         <button class="blogcontent">
                             <a href="blogthree.html" class="blogcircle">
-                                <h2>Map your dev career</h2>
+                                <h2>How to Map your dev career</h2>
                                 <p>/// May 26, 2023</p>
                             </a>
                         </button>
