--- a/html/index.html
+++ b/html/index.html
@@ -695,40 +695,217 @@
                     </div>
                 </div>
 
+                <!-- BLOG #1 SLIDE IN -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <div class="blogone-slide-in">
+                    <!-- Border -->
+                    <div class="blogone-border">
+                        <!-- Blog Circle -->
+                        <div class="blogcircle">
+                            <!-- Header and Underline -->
+                            <section class="blogoneheader">
+                                <div class="blogonetitle">
+                                    <div class="outertitle">
+                                        <div class="innertitle">
+                                            <h1>My Developer Journey</h1>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="sectiontitle">
+                                    <p>Blog</p>
+                                </div>
+                            </section>
+
+                            <!-- Description and Date -->
+                            <section class="author">
+                                    <P>By Courtney Jacobs</p>
+                            </section>
+
+                            <!-- Date -->
+                            <section class="date">
+                                <p class="nums">7/19/2023</p>
+                                <p class="times">3:13 pm</p>
+                            </section>
+
+                            <!-- The Blog Part -->
+                            <div class="bogoneoutline">
+                                <!-- Content -->
+                                <section class="blogonecontent">
+                                    My developer journey was a long one. during the pandemic, 
+                                    blah blah Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                    Nobis, laborum sint, necessitatibus non illo dolorum quod quas ex 
+                                    debitis architecto repellendus hic asperiores voluptas iste culpa 
+                                    labore. Adipisci, deserunt molestiae.BackFind your own wayYou 
+                                    have to find your own wayduring the pandemic. BackFind your own wayYou 
+                                    have to find your own wayduring the pandemic.BackFind your own wayYou 
+                                    have to find your own wayduring the pandemic.
+                                </section>
+                            </div>
+
+                            <!-- Share Links -->
+                            <section class="blogonesharescircle">
+                                <div class="blogoneshares">
+                                    <a href="#"><img id="twitter" src="/img/blogicons/twitter.png" alt="twitter"></a>
+                                    <a href="#"><img id="linkedin" src="/img/blogicons/linkedin.png" alt="linkedin"></a>
+                                    <a href="#"><img id="share" src="/img/blogicons/share.png" alt="share"></a>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                    <!-- Back Button -->
+                    <section class="blogonearrow">
+                        <button class="closeblog1">
+                            <img src="/img/arrows/backArrow.png" alt="Back">
+                            <p>Back</p>
+                        </button>
+                    </section>
+                </div>
+                <!-- BLOG #1 DESCRIPTION SLIDE IN END -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+
+
+                <!-- BLOG #2 SLIDE IN -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <!-- --------------------------- -->
+                <div class="blogtwo-slide-in">
+                    <!-- Border -->
+                    <div class="blogtwo-border">
+                        <!-- Blog Circle -->
+                        <div class="blogcircle">
+                            <!-- Header and Underline -->
+                            <section class="blogtwoheader">
+                                <div class="blogtwotitle">
+                                    <div class="outertitle">
+                                        <div class="innertitle">
+                                            <h1>Find your own way</h1>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="sectiontitle">
+                                    <p>Blog</p>
+                                </div>
+                            </section>
+
+                            <!-- Description and Date -->
+                            <section class="author">
+                                <P>By Courtney Jacobs</p>
+                            </section>
+
+                            <!-- Date -->
+                            <section class="date">
+                                <p class="nums">7/25/2023</p>
+                                <p class="times">5:09 pm</p>
+                            </section>
+
+                            <!-- The Blog Part -->
+                            <div class="blogtwooutline">
+                                <!-- Content -->
+                                <section class="blogtwocontent">
+                                    <p>
+                                        My developer journey was a long one. during the pandemic, 
+                                        blah blah Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                        Nobis, laborum sint, necessitatibus non illo dolorum quod quas ex 
+                                        debitis architecto repellendus hic asperiores voluptas iste culpa 
+                                        labore. Adipisci, deserunt molestiae.BackFind your own wayYou 
+                                        have to find your own wayduring the pandemic. BackFind your own wayYou 
+                                        have to find your own wayduring the pandemic.BackFind your own wayYou 
+                                        have to find your own wayduring the pandemic.
+                                    </p>
+                                </section>
+                            </div>
+
+                            <!-- Share Links -->
+                            <section class="blogtwosharescircle">
+                                <div class="blogtwoshares">
+                                    <a href="#"><img id="twitter" src="/img/blogicons/twitter.png" alt="twitter"></a>
+                                    <a href="#"><img id="linkedin" src="/img/blogicons/linkedin.png" alt="linkedin"></a>
+                                    <a href="#"><img id="share" src="/img/blogicons/share.png" alt="share"></a>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                    <!-- Back Button -->
+                    <section class="blogonearrow">
+                        <button class="closeblog1">
+                            <img src="/img/arrows/backArrow.png" alt="Back">
+                            <p>Back</p>
+                        </button>
+                    </section>
+                </div>
+                <!-- BLOG #2 DESCRIPTION SLIDE IN END -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+                <!-- ------------------------------- -->
+
                 <!-- BOTTOM of the blog section -->
-            <section id="botblogtablet">
-                <!-- BLOGS container -->
-                <div class="botblogoutline">
-                        
-                    <!-- The actual Circles -->
-                    <div class="blogcircles">
-                        <button class="blogcontent">
-                            <div class="blogcircle">
-                                <h2>My Developer Journey</h2>
-                                <p>/// May 1, 2023</p>
-                            </div>
-                        </button>
-                    </div>
+                <section id="botblogtablet">
+                    <!-- BLOGS container -->
+                    <div class="botblogoutline">
+                            
+                        <!-- The actual Circles -->
+                        <div class="blogcircles">
+                            <button class="blogcontent">
+                                <div class="blogcircle">
+                                    <h2>My Developer Journey</h2>
+                                    <p>/// May 1, 2023</p>
+                                </div>
+                            </button>
+                        </div>
 
-                    <div class="blogcircles">
-                        <button class="blogcontent">
-                            <div class="blogcircle">
-                                <h2>Find your own way</h2>
-                                <p>/// May 19, 2023</p>
-                            </div>
-                        </button>
-                    </div>
+                        <div class="blogcircles">
+                            <button class="blogcontent">
+                                <div class="blogcircle">
+                                    <h2>Find your own way</h2>
+                                    <p>/// May 19, 2023</p>
+                                </div>
+                            </button>
+                        </div>
 
-                    <div class="blogcircles">
-                        <button class="blogcontent">
-                            <a href="blogthree.html" class="blogcircle">
-                                <h2>How to Map your dev career</h2>
-                                <p>/// May 26, 2023</p>
-                            </a>
-                        </button>
-                    </div>
-            </div>
-            </section>
+                        <div class="blogcircles">
+                            <button class="blogcontent">
+                                <a href="blogthree.html" class="blogcircle">
+                                    <h2>How to Map your dev career</h2>
+                                    <p>/// May 26, 2023</p>
+                                </a>
+                            </button>
+                        </div>
+                </div>
+                </section>
             </section>
         </section>
     </section>
