top two blogs done

--- a/html/index.html
+++ b/html/index.html
@@ -854,7 +854,7 @@
                     </div>
                     <!-- Back Button -->
                     <section class="blogonearrow">
-                        <button class="closeblog1">
+                        <button class="closeblog2">
                             <img src="/img/arrows/backArrow.png" alt="Back">
                             <p>Back</p>
                         </button>
@@ -888,7 +888,7 @@
                         </div>
 
                         <div class="blogcircles">
-                            <button class="blogcontent">
+                            <button class="blogcontent" id="blogbutton2">
                                 <div class="blogcircle">
                                     <h2>Find your own way</h2>
                                     <p>/// May 19, 2023</p>
