--- a/html/index.html
+++ b/html/index.html
@@ -875,7 +875,7 @@
                 <!-- BOTTOM of the blog section -->
                 <section id="botblogtablet">
                     <!-- BLOGS container -->
-                    <div class="botblogoutline">
+                    <!-- <div class="botblogoutline"> -->
                             
                         <!-- The actual Circles -->
                         <div class="blogcircles">
@@ -904,7 +904,72 @@
                                 </a>
                             </button>
                         </div>
-                </div>
+                    <!-- </div> -->
+                </section>
+            </section>
+        </section>
+
+        <!-- CONTACT SECTION -->
+        <section id="contacttabletcontainer">
+            <!-- MAIN EXPERIENCE MOBILE SECTION -->
+            <section id="contacttablet">
+                <!-- TOP Level of about mobile page -->
+                <section class="topcontacttablet">
+                    <!-- Title Mobile -->
+                    <div class="titletablet">
+                        <h1>Contact</h1>
+                    </div>
+                </section>
+
+                <!-- BOTTOM of Contact section -->
+                <section class="botcontacttablet">
+                    <!-- Contact Form -->
+                    <section class="contactform">
+                        <!-- Name and Email -->
+                        <div class="nameemaildiv">
+                            <!-- NAME -->
+                            <div class="name">
+                                <p>Name</p>
+                                <input type="text" id="name">
+                            </div>
+
+                            <!-- EMAIL -->
+                            <div class="email">
+                                <p>Email</p>
+                                <input type="email" id="email">
+                            </div>
+
+                            <!-- MESSAGE -->
+                            <div class="message">
+                                <p>Message</p>
+                                <input type="text" id="message">
+                            </div>
+                            <!-- SUBMIT BUTTON -->
+                            <div class="submit">
+                                <button onclick="sendMail()">Submit</button>
+                            </div>
+
+                            <!-- POWERED BY -->
+                            <div class="poweredby">
+                                <!-- <img src="./img/logo/grey_logo_courdevelops.png" alt="Logo"> -->
+                                <small>
+                                    <div class="tabletsocials">
+                                        <!-- SOCIALS MOBILE -->
+                                        <a target="_blank" href="https://github.com/courthub74"><img id="github" src="/img/socials/GreySocials/githubGrey.png" alt="github"></a>
+                                        <a target="_blank" href="https://www.linkedin.com/in/courtney-jacobs-develops/"><img id="github" src="/img/socials/GreySocials/linkedinGrey.png" alt="linkedin"></a>
+                                        <a target="_blank" href="https://twitter.com/CourDevelops"><img id="linkedin" src="/img/socials/GreySocials/twitterGrey.png" alt="twitter"></a>
+                                        <a target="_blank" href="https://instagram.com/courtj_135"><img id="instagram" src="/img/socials/GreySocials/instagramGrey.png" alt="instagram"></a>
+                                    </div>
+                                    <div class="copyrights">
+                                        <!-- <img src="./img/logo/grey_logo_courdevelops.png" alt="Logo"> -->
+                                        <p>Powered By</p>
+                                        <a href="#">CourDevelops</a>
+                                        <p>&copy; 2023</p>
+                                    </div>
+                                </small>
+                            </div>
+                        </div>
+                    </section>
                 </section>
             </section>
         </section>
