message textarea position set

--- a/html/index.html
+++ b/html/index.html
@@ -126,6 +126,7 @@
                     <div class="infotablet">
                         <p>
                             Computer Science degree holder and Self taught developer.
+                            Ever since I created my first cryptocurrency web scrapper I've been hooked.
                             For the last 3 years I've taught myself web development daily.
                             Along the path of learning, I have acquired freelance jobs under 
                             my brand CourDevelops.
@@ -942,7 +943,8 @@
                             <!-- MESSAGE -->
                             <div class="message">
                                 <p>Message</p>
-                                <input type="text" id="message">
+                                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                                <!-- <input type="text" id="message"> -->
                             </div>
                             <!-- SUBMIT BUTTON -->
                             <div class="submit">
