--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,16 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="/css/style.css">
+
+    <!-- EMAIL -->
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("FIfQ901UhiVIkNVE2");
+        })();
+    </script>
 </head>
 <body class="body">
 
@@ -982,5 +992,8 @@
 
     <!-- Slide Menu Home -->
     <script src="/js/slidemenuburger.js"></script>
+
+    <!-- Send emails -->
+    <script src="/js/sendmail.js"></script>
 </body>
 </html>
