--- a/html/index.html
+++ b/html/index.html
@@ -958,7 +958,7 @@
                             </div>
                             <!-- SUBMIT BUTTON -->
                             <div class="submit">
-                                <button onclick="sendMail()">Submit</button>
+                                <button onclick="sendMail()" id="submitemail">Submit</button>
                             </div>
 
                             <!-- POWERED BY -->
