home menu button works

--- a/html/index.html
+++ b/html/index.html
@@ -57,8 +57,8 @@
 
                 <!-- List -->
                 <div class="tabletlisthome">
-                    <a id="home_menu_mobile" href="#hometabletmain">Home</a>
-                    <a id="about_menu_mobile" href="#abouttabletmain">About</a>
+                    <a id="home_menu_tablet" href="#tablethome">Home</a>
+                    <a id="about_menu_tablet" href="#abouttablet">About</a>
                     <a href="#">Skills</a>
                     <a href="#">Portfolio</a>
                     <a href="#">Experience</a>
