--- a/html/index.html
+++ b/html/index.html
@@ -59,11 +59,11 @@
                 <div class="tabletlisthome">
                     <a id="home_menu_tablet" href="#tablethome">Home</a>
                     <a id="about_menu_tablet" href="#abouttablet">About</a>
-                    <a href="#">Skills</a>
-                    <a href="#">Portfolio</a>
-                    <a href="#">Experience</a>
-                    <a href="#">Blog</a>
-                    <a href="#">Contact</a>
+                    <a id="skills_menu_tablet" href="#skillstablet">Skills</a>
+                    <a id="portfolio_menu_tablet" href="#portfoliotabletdiv">Portfolio</a>
+                    <a id="experience_menu_tablet" href="#experiencetablet">Experience</a>
+                    <a id="blog_menu_tablet" href="#blogtablet">Blog</a>
+                    <a id="contact_menu_tablet" href="#contacttablet">Contact</a>
                 </div>
 
                 <!-- socials -->
